@@ -1269,7 +1269,7 @@ sub makedupindex {
 		local($writing) = 0;
 
 		$count = 0;
-		local($command) = "global -nx$option \".*\" | sort +0 -1 +2 -3 +1n -2 -u";
+		local($command) = "global -nx$option \".*\" | gtags --sort";
 		open(LIST, "$command |") || &'error("cannot fork.");
 		while (<LIST>) {
 			chop;
