@@ -29,6 +29,8 @@ ChangeLog about GNU GLOBAL
 	* gtags, htags: './' removed from path name in verbose message.
 	* *.c, *.h: copyright year fixed.
 	* configure.in: macro AG_BYTE_ORDER recovered.
+	* htags: sort command replaced with gtags --sort in makedupindex()
+	  so that sort can treat smaller number of tag lines.
 
 March 30 2002, Shigio Yamaguchi  <shigio@gnu.org>
 
